// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditContentsPrimaryArea draft mode renders actions 1`] = `
<div>
  <Button
    onClick={[Function]}
    size="default"
  >
    <strong>
      Save and Publish
    </strong>
  </Button>
  <div
    style={
      Object {
        "display": "inline-block",
      }
    }
  >
    <Popover
      bottom={true}
      left={true}
      right={true}
      trigger={
        <Button
          size="default"
        >
          <ArrowDropDown />
        </Button>
      }
    >
      <ActionList
        actions={
          Array [
            Object {
              "content": <span>
                <CheckCircleOutline />
                 Save and Publish
              </span>,
              "group": 1,
              "onClick": [Function],
            },
            Object {
              "content": <span>
                <FileEdit />
                 Save Draft
              </span>,
              "group": 1,
              "onClick": [Function],
            },
            Object {
              "content": <span>
                <RemoveRedEye />
                 View Published
              </span>,
              "group": 2,
              "onClick": [Function],
              "visible": false,
            },
            Object {
              "content": <span>
                <ContentCopy />
                 Duplicate
              </span>,
              "group": 2,
              "onClick": [Function],
            },
          ]
        }
        groupByKey="group"
      />
    </Popover>
  </div>
</div>
`;

exports[`EditContentsPrimaryArea published mode renders  actions 1`] = `
<div>
  <Button
    onClick={[Function]}
    size="default"
  >
    <strong>
      Edit Draft
    </strong>
  </Button>
  <div
    style={
      Object {
        "display": "inline-block",
      }
    }
  >
    <Popover
      bottom={true}
      left={true}
      right={true}
      trigger={
        <Button
          size="default"
        >
          <ArrowDropDown />
        </Button>
      }
    >
      <ActionList
        actions={
          Array [
            Object {
              "content": <span>
                <FileEdit />
                 Edit Draft
              </span>,
              "onClick": [Function],
            },
            Object {
              "content": <span>
                <ContentCopy />
                 Duplicate
              </span>,
              "onClick": [Function],
            },
          ]
        }
        groupByKey="section"
      />
    </Popover>
  </div>
</div>
`;
